--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,8 +27,9 @@ body {
 }
 
 #randomNumber {
-	border: red solid 2px;
-	background-color: white;
+	font-family: 'Audiowide', cursive;
+	font-size: 40px;
+	color: red;
 }
 
 #gameStats {
@@ -49,7 +50,7 @@ body {
 #score {
 	font-family: 'Audiowide', cursive;
 	font-size: 40px;
-	color: white;
+	color: red;
 	text-align: center;
 	padding-bottom: 200px;
 }
